--- a/FreeIOMonadExample/FreeIOMonadExample.csproj
+++ b/FreeIOMonadExample/FreeIOMonadExample.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <StartupObject>FreeIOMonadExample.Program</StartupObject>
+    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
 
 </Project>
