--- a/FreeIOMonadExample/FreeIOMonadExample.csproj
+++ b/FreeIOMonadExample/FreeIOMonadExample.csproj
@@ -4,7 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <StartupObject>FreeIOMonadExample.Program</StartupObject>
-    <LangVersion>7.2</LangVersion>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
 </Project>
