added: IO2 wrapping the IResult<Err, Val>

--- a/FreeIO/FreeIO.csproj
+++ b/FreeIO/FreeIO.csproj
@@ -6,4 +6,8 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SharpIO\SharpIO.csproj" />
+  </ItemGroup>
+
 </Project>
